// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render Toast with given text 1`] = `
<body>
  <div />
  <div
    id="toast-portal-toast-test-id"
  >
    <div
      aria-hidden="true"
      class="sc-bdvvtL kYuxJh"
      data-testid="toast"
      role="alert"
      type="success"
    >
      <span
        class="material-icons sc-gsDKAQ hHMBic"
      >
        done
      </span>
      Board added successfully
    </div>
  </div>
</body>
`;

exports[`Toast should render error Toast 1`] = `
<body>
  <div />
  <div
    id="toast-portal-toast-test-id"
  >
    <div
      aria-hidden="true"
      class="sc-bdvvtL jJTopw"
      data-testid="toast"
      role="alert"
    >
      <span
        class="material-icons sc-gsDKAQ hHMBic"
      >
        priority_high
      </span>
      Failed to add board
    </div>
  </div>
</body>
`;

exports[`Toast should render success Toast 1`] = `
<body>
  <div />
  <div
    id="toast-portal-toast-test-id"
  >
    <div
      aria-hidden="true"
      class="sc-bdvvtL kYuxJh"
      data-testid="toast"
      role="alert"
      type="success"
    >
      <span
        class="material-icons sc-gsDKAQ hHMBic"
      >
        done
      </span>
      Board added successfully
    </div>
  </div>
</body>
`;
